# pepper-place

./: .cursorignore  .gitignore  README.md  docker-compose.yml  image_optimizations.md  umami-docker-compose.yml
frontend/: .dockerignore  DEPLOYMENT.md  Dockerfile  FINAL_STATUS.md  Makefile  PRE-RENDERING.md  PROGRESS.md  REFACTOR_COMPLETE.txt  REFACTOR_PLAN.md  SUMMARY.md  UMAMI_SETUP.md  nginx.conf  nixpacks.toml  package-lock.json  package.json
frontend/public/: index.html  manifest.json  robots.txt  service-worker.js  sitemap.xml
frontend/scripts/: generate-sitemap.js
frontend/src/: App.tsx  index.css  index.tsx  reportWebVitals.ts
frontend/src/components/: DebugPanel.tsx  MediaItems.tsx  MetadataChecker.tsx  PhotoGallery.tsx  SortDebugger.tsx  ThumbnailBar.tsx  Timeline.tsx  YearJumpDebugger.tsx
frontend/src/hooks/: useImagePreloader.ts  usePhotoData.ts  usePhotoNavigation.ts
frontend/src/services/: PhotoService.ts
frontend/src/styles/: App.styles.ts  GlobalStyles.ts  PhotoGallery.styles.ts  README.md  REFACTORING.md  Timeline.styles.ts  styled.d.ts  theme.ts
frontend/src/types/: index.ts
frontend/src/utils/: media.ts
python_stuff/: dedupe_photos.py  favicon_creator.py  pyproject.toml  upload_photos.py  utils.py
